[package]
name = "analogue"
version = "0.1.0"
authors = ["Alexander Hill <CodeBreadpudding@gmail.com>"]
edition = "2018"
license = "0BSD"

[dependencies]
chrono = "0.4.19"
reqwest = "0.10.9"
serde = { version = "1.0.117", features = ["derive"] }
serenity = "0.9.2"
serde_json = "1.0.60"
tokio = { version = "0.2.23", features = ["macros", "rt-threaded"] }
toml = "0.5.7"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
